[package]

name = "num_cpus"
version = "1.13.0" # don't forget to update html_root_url
description = "Get the number of CPUs on a machine."
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/seanmonstar/num_cpus"
documentation = "https://docs.rs/num_cpus"
keywords = ["cpu", "cpus", "cores"]
categories = ["hardware-support"]
readme = "README.md"

[dependencies]
# libc = { git = "https://github.com/mesalock-linux/libc-sgx" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk", optional = true }

# [target.'cfg(all(any(target_arch = "x86_64", target_arch = "aarch64"), target_os = "hermit"))'.dependencies]
# hermit-abi = "0.1.3"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]